# rusty-matrix

./: .gitignore  Cargo.toml  README.md
.github/workflows/: mirror.yml
benches/: ops_benchmark.rs
examples/: add_matrix.rs  print_matrix.rs
samples/: Cargo.toml
samples/src/: multiplication.rs
src/: common.rs  error.rs  lib.rs  matrix.rs  prelude.rs
src/implementations/: heap_matrix.rs  mod.rs  stack_matrix.rs
